Added show password json in login json

--- a/public/language/az/login.json
+++ b/public/language/az/login.json
@@ -8,5 +8,6 @@
     "login-successful": "Siz uğurla daxil oldunuz!",
     "dont-have-account": "Sizin hesabınız yoxdur?",
     "logged-out-due-to-inactivity": "Siz fəaliyyətsizlik səbəbindən İdarəetmə Panelindən çıxmısınız",
-    "caps-lock-enabled": "Caps Lock aktivdir"
+    "caps-lock-enabled": "Caps Lock aktivdir",
+    "show-password": "Show Password"
 }
