--- a/public/language/ar/login.json
+++ b/public/language/ar/login.json
@@ -8,5 +8,7 @@
     "login-successful": "قمت بتسجيل الدخول بنجاح!",
     "dont-have-account": "لا تملك حساب؟",
     "logged-out-due-to-inactivity": "لقد تم تسجيل خروجك من لوحة تحكم بسبب عدم نشاطك",
-    "caps-lock-enabled": "Caps Lock is enabled"
+    "caps-lock-enabled": "Caps Lock is enabled",
+    "show-password": "Show Password"
+    
 }
