--- a/public/language/bg/login.json
+++ b/public/language/bg/login.json
@@ -8,5 +8,6 @@
     "login-successful": "Вие влязохте успешно!",
     "dont-have-account": "Нямате регистрация?",
     "logged-out-due-to-inactivity": "Вие излязохте автоматично от администраторския контролен панел, поради бездействие.",
-    "caps-lock-enabled": "Главните букви са включени"
+    "caps-lock-enabled": "Главните букви са включени",
+    "show-password": "Show Password"
 }
