--- a/public/language/hu/login.json
+++ b/public/language/hu/login.json
@@ -8,5 +8,6 @@
     "login-successful": "Sikeresen beléptél!",
     "dont-have-account": "Még nincs fiókod?",
     "logged-out-due-to-inactivity": "Inaktivitás miatt ki lettél jelentkeztetve az Adminisztrációs vezérlőpultból",
-    "caps-lock-enabled": "Caps Lock bekapcsolva"
+    "caps-lock-enabled": "Caps Lock bekapcsolva",
+    "show-password": "Show Password"
 }
