--- a/public/language/ja/login.json
+++ b/public/language/ja/login.json
@@ -8,5 +8,6 @@
     "login-successful": "ログインしました！",
     "dont-have-account": "アカウントをもっていませんか?",
     "logged-out-due-to-inactivity": "しばらく操作されていなかったため、管理パネルよりログアウトされました。",
-    "caps-lock-enabled": "Caps Lock is enabled"
+    "caps-lock-enabled": "Caps Lock is enabled",
+    "show-password": "Show Password"
 }
