Completed full integration of frontend and backend anonymous posting, added testing

--- a/public/language/en-GB/global.json
+++ b/public/language/en-GB/global.json
@@ -140,6 +140,7 @@
 
 	"guest": "Guest",
 	"guests": "Guests",
+	"anonymous": "Anonymous",
 	"former-user": "A Former User",
 	"system-user": "System",
 	"unknown-user": "Unknown user",
