--- a/public/language/en-GB/topic.json
+++ b/public/language/en-GB/topic.json
@@ -244,6 +244,7 @@
 	"no-more-next-post": "You don't have more posts in this topic",
 	"open-composer": "Open composer",
 	"post-quick-reply": "Quick reply",
+	"post-anonymously": "Post anonymously",
 
 	"navigator.index": "Post %1 of %2",
 	"navigator.unread": "%1 unread",
